@@ -33,6 +33,9 @@ Changes since PyInstaller 1.3
    causing this exception to be generated: "PYZ entry 'encodings' (0j)
    is not a valid code object".
  + Fix problem when having unicode strings among path elements.
+ + Fix random exception ("bad file descriptor") with "prints" in non-console
+   mode (actually a pythonw "bug" that's fixed in Python 3.0).
+
 
 PyInstaller 1.3
 ---------------
